--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
   "dependencies": {
     "body-parser": "~1.18.2",
     "cheerio": "^1.0.0-rc.2",
+    "co": "^4.6.0",
     "co-redis": "^2.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "ejs": "^2.5.7",
     "express": "~4.15.5",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
     "redis": "^2.8.0",
     "serve-favicon": "~2.4.5",
-    "superagent": "^3.8.2"
+    "superagent": "^3.8.2",
+    "supervisor": "^0.12.0"
   }
 }
