--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "redis": "^2.8.0",
     "serve-favicon": "~2.4.5",
     "superagent": "^3.8.2",
-    "supervisor": "^0.12.0"
+    "supervisor": "^0.12.0",
+    "ws": "^4.1.0"
   }
 }
